<resources>
    <string name="app_name">News_app</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="content">Content</string>
    <string name="publish_date">publishdate\n</string>
    <string name="source_name">sourcename\n</string>
    <string name="saved_news">Saved News.</string>
    <string name="news">News.</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="source">Source</string>
    <string name="sortnewsby">Sort News By</string>
    <string name="no_articles_available">No articles available</string>
    <string name="sortdialog">SortDialog</string>
    <string name="no_articlesavailable">No articles available</string>
    <string name="sort_dialog">SortDialog</string>

</resources>