<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_bg"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/_25dp"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sortnewsby"
        android:fontFamily="@font/adlam_display"
        android:paddingBottom="@dimen/_12dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/author" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/title" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/date" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/source" />
    </com.google.android.material.chip.ChipGroup>
</LinearLayout>
