<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    android:fitsSystemWindows="true"
    tools:context=".ui.view.ArticleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"

        android:paddingTop="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adlam_display"
            android:gravity="center_vertical"
            android:text="Article"
            android:textSize="@dimen/_28sp"
            android:textStyle="italic|bold"
            android:paddingStart="@dimen/_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/buttonSave" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Save"
            android:textColor="@android:color/white"
            app:icon="@drawable/baseline_save_24"
            app:iconGravity="textEnd"

            app:iconTint="@android:color/white"
            android:backgroundTint="@color/black"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_5dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/RoundedCornerImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/adlam_display"
        android:padding="@dimen/_5dp"
                android:text="Title"
                android:textSize="@dimen/_28sp"
                android:textStyle="bold|italic"
                android:layout_marginTop="@dimen/_16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:fontFamily="@font/adlam_display"
                android:text="@string/description"
                android:textSize="@dimen/_20sp"
                android:padding="@dimen/_5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

            <TextView
                android:id="@+id/textViewSourceName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:fontFamily="@font/adlam_display"
                android:text="@string/source_name"
                android:textSize="@dimen/_16sp"
                android:textStyle="italic|bold"
                android:padding="@dimen/_5dp"
                android:layout_marginEnd="@dimen/_5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewDescription" />

            <TextView
                android:id="@+id/textViewAuthor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:fontFamily="@font/adlam_display"
                android:layout_marginEnd="@dimen/_5dp"
                android:text="@string/author"
                android:textSize="@dimen/_16sp"
                android:textStyle="italic|bold"
                android:padding="@dimen/_5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewSourceName" />

            <TextView
                android:id="@+id/textViewPublishDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5dp"
                android:text="@string/publish_date"
                android:textSize="@dimen/_14sp"
                android:padding="@dimen/_5dp"
                android:layout_marginEnd="@dimen/_5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewAuthor" />

            <TextView
                android:id="@+id/textViewContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textSize="@dimen/_14sp"
                android:padding="@dimen/_5dp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewPublishDate" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
